# TDC

./: ---TTC---qt.pro  .gitignore  CMakeLists.txt  INSTALL-GUI.md  INSTALL.md  README.md  TDC-qt.pro  TODO  TTC-qt.pro  bitcoin-qt.pro  ttc-qt.pro
apps/: CMakeLists.txt  bitcoind.cpp
docs/: audit-deps.md
libs/Lyra2RE/: CMakeLists.txt  Lyra2.c
libs/json/: CMakeLists.txt
src/: CMakeLists.txt  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.h  base58.h  bignum.h  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  key.cpp  key.h  keystore.h  leveldb.cpp  leveldb.h  main.cpp  main.h  makefile.mingw  makefile.unix  miner.cpp  miner.h  net.cpp  (+28 more)
src/AppSpecific/: init.cpp  init.h  noui.cpp  ui_interface.h
src/Constants/: frommain.h
src/Crypto/: hash.h
src/DataTypes/: block.cpp  block.h
src/Helpers/: bignum.h  compat.h  hash.h  leveldb.h  limitedmap.h  serialize.h  sync.cpp  util.cpp  util.h
src/Lyra2RE/: Lyra2.h  Lyra2RE.c  Lyra2RE.h
src/Miner/: miner.cpp  miner.h
src/Models/: block.cpp  block.h  transaction.cpp  transaction.h
src/Net/: addrman.cpp  addrman.h  alert.cpp  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  net.cpp  net.h  netbase.cpp  protocol.cpp  protocol.h
src/RPC/: bitcoinrpc.cpp  bitcoinrpc.h  rpcdump.cpp  rpcmining.cpp  rpcnet.cpp  rpcrawtransaction.cpp  rpcwallet.cpp
src/Utils/: serialize.h
src/Versioning/: clientversion.h  version.cpp  version.h
src/Wallet/: base58.h  crypter.cpp  crypter.h  key.h  keystore.h  script.cpp  script.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/qt/: aboutdialog.cpp  addressbookpage.cpp  addresstablemodel.h  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  editaddressdialog.cpp  guiutil.cpp  intro.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentserver.cpp  qrcodedialog.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp  transactiondesc.cpp  transactionfilterproxy.h  walletmodel.cpp  walletmodel.h
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  intro.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_en.qm
src/qt/res/: bitcoin-qt.rc
src/qt/test/: uritests.cpp
src/test/: Checkpoints_tests.cpp  README.md  bloom_tests.cpp  transaction_tests.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: base58_encode_decode.json  tx_invalid.json
tests/: CMakeLists.txt  Checkpoints_tests.cpp  DoS_tests.cpp  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  getarg_tests.cpp  key_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  serialize_tests.cpp  sigopcount_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp  uint160_tests.cpp  uint256_tests.cpp  util_tests.cpp  wallet_tests.cpp
tests/data/: base58_keys_valid.json  tx_valid.json
